<resources>
    <string name="app_name">DiaryApps</string>
    <string name="password">Password</string>
    <string name="register">SIGN UP</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="log_in">LOG IN</string>
    <string name="create_new_account">Create New Account</string>
    <string name="orAtau">---------- OR ----------</string>
    <string name="rifara_studio">RIFARA Studio Diary Apps</string>
    <string name="kata_kata">"Belajar menghargai proses untuk sebuah perubahan"</string>
    <string name="sign_in">SIGN IN</string>
    <string name="katakata2">"Tidak hanya usaha yang berpengaruh pada hasil, namun juga kesungguhan, doa, dan tawakal."</string>
</resources>